objects/vlocity_ins__MarketingEvent__c.object
<CustomObject>
    <description>Represents an organized event typically for promoting or educating people about a company&apos;s products or services. For example, health insurers may hold events to promote their insurance offerings or to enroll members in plans. Financial services organizations may hold educational events focused on retirement planning or successful investing.</description>
    <fields>
        <fullName>vlocity_ins__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The group (also known as employer or plan sponsor) for which the event is held.</description>
        <label>Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Enrollment Events</relationshipLabel>
        <relationshipName>EnrollmentEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttendanceActual__c</fullName>
        <label>Actual Attendance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttendanceCapacity__c</fullName>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttendanceTarget__c</fullName>
        <label>Target Attendance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CampaignId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Marketing Events</relationshipLabel>
        <relationshipName>MarketingEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CountOfRegistered__c</fullName>
        <label>Registered</label>
        <summaryFilterItems>
            <field>vlocity_ins__MarketingEventRegistration__c.vlocity_ins__IsCancelled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__MarketingEventRegistration__c.vlocity_ins__MarketingEventId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EventEndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EventManagerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ManagedMarketingEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EventStartDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EventType__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Educational</fullName>
                </value>
                <value>
                    <fullName>Enrollment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__EventWebsite__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LineOfBusiness__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group Dental</fullName>
                </value>
                <value>
                    <fullName>Group Medical</fullName>
                </value>
                <value>
                    <fullName>Group Vision</fullName>
                </value>
                <value>
                    <fullName>Individual Dental</fullName>
                </value>
                <value>
                    <fullName>Individual Medical</fullName>
                </value>
                <value>
                    <fullName>Individual Vision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartnerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The broker or other channel partner requesting or sponsoring the event.</description>
        <label>Broker</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Broker Marketing Events</relationshipLabel>
        <relationshipName>PartnerMarketingEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PercentOfCapacity__c</fullName>
        <formula>vlocity_ins__CountOfRegistered__c /  vlocity_ins__AttendanceCapacity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent of Capacity</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Marketing Events</relationshipLabel>
        <relationshipName>MarketingEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RequestStatus__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__VenueId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The venue where this marketing event is held.</description>
        <label>Venue</label>
        <referenceTo>vlocity_ins__Venue__c</referenceTo>
        <relationshipLabel>Marketing Events</relationshipLabel>
        <relationshipName>MarketingEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VenueStatus__c</fullName>
        <description>Status of securing a venue for this event.</description>
        <label>Venue Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Publishable</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Marketing Event</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>